<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.GetStartedActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/countryButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/main_menu_selector"
            android:drawableTop="@drawable/ic_flag_white_24dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/country_menu"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/homeButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/main_menu_selector"
            android:drawableTop="@drawable/ic_home_white_24dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/home_menu"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/accountButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/main_menu_selector"
            android:drawableTop="@drawable/ic_account_circle_white_24dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/account_menu"
            android:textColor="@color/white" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="192dp"
        android:layout_height="37dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logo_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_default_monochrome_black" />

</androidx.constraintlayout.widget.ConstraintLayout>